--- a/app/assets/templates/feeds/index.jst.ejs
+++ b/app/assets/templates/feeds/index.jst.ejs
@@ -3,7 +3,7 @@
 
   <% feeds.each(function(feed){ %>
     <li>
-      <a href="#/feeds/<%= feed.id %>"><%= feed.escape('title') %></a>
+      <a href="#feeds/<%= feed.id %>"><%= feed.escape('title') %></a>
     </li>
   <% }); %>
 
